--- a/src/main/resources/assets/couplerings/lang/en_us.json
+++ b/src/main/resources/assets/couplerings/lang/en_us.json
@@ -1,5 +1,4 @@
 {
-  "itemGroup.couplerings": "Example Mod Tab",
-  "block.couplerings.example_block": "Example Block",
-  "item.couplerings.example_item": "Example Item"
+  "itemGroup.couplerings": "Couple Rings",
+  "item.couplerings.couple_ring": "Couple Ring"
 }
